Add generics for RDFNode. Remove unnecessary factories/registries
Signed-off-by: Jakub Šmrha <kuba.smrha@gmail.com>